...
                self.presenter.restartGame()
            }
        alertPresenter?.showAlert(showController: self, model: networkAlertModel)
    }
    
    func showEndGame() {
        let alertTitle = "Этот раунд окончен!"
        let alertButtonText = "Сыграть ещё раз"
        let alertText = presenter.getResultsMessage()
        let resultsAlertModel = AlertModel(title: alertTitle, message: alertText, buttonText: alertButtonText) { [weak self] in
            guard let self = self else { return }
            self.presenter.restartGame()
        }
...
